<resources>
    <string name="app_name" translatable="false">HemaCount</string>

    <string name="empty" translatable="false"></string>

    <!-- Menu nav options-->
    <string name="menu_counter">WBC Differential Counter</string>
    <string name="menu_patient">Patient</string>
    <string name="menu_record">Record</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>

    <!--Mensajes-->
    <string name="mensaje_titulo_crear_paciente">Create patient</string>
    <string name="mensaje_exito_guardado">Saved successfully in the history</string>
    <string name="mensaje_campo_obligatorio">Complete the required fields</string>
    <string name="mensaje_error_guardar">Error saving</string>
    <string name="mensaje_seleccione_paciente">--Select patient--</string>
    <string name="mensaje_campo_obligatorio_calculo">To calculate complete the required field</string>
    <string name="mensaje_alerta_titulo">Export</string>
    <string name="mensaje_fechas">Validate the search dates</string>
    <string name="mensaje_eliminar_registro">Are you sure to delete the record?</string>
    <string name="mensaje_registro_eliminado_exitoso">Successfully deleted</string>
    <string name="mensaje_registro_eliminado_error">Error deleting</string>
    <string name="mensaje_error_exportar">Failed to export</string>
    <string name="mensaje_exito_exportar">Successfully exported</string>

    <string name="campo_obligatorio" translatable="false">*</string>

    <string name="nombre">Name</string>
    <string name="primer_apellido">First surname</string>
    <string name="segundo_apellido">Second surname</string>
    <string name="sexo">Sex</string>
    <string name="sexo_femenino">Female</string>
    <string name="sexo_masculino">Male</string>
    <string name="telefono">Phone</string>
    <string name="input_cantidad_total">Total amount of WBC</string>

    <!-- Botones -->
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="resultado">Result</string>
    <string name="calcular">Calculate</string>
    <string name="guardar">Save</string>
    <string name="exportar">Export</string>
    <string name="eliminar_ultimo">Undo</string>
    <string name="reiniciar">Reset</string>
    <string name="buscar">Search</string>
    <string name="eliminar">Delete</string>

    <!-- Etiquetas -->
    <string name="cantidad_total">Total quantity: </string>
    <string name="asociar_a_paciente">"Associate patient: "</string>

    <!-- Tabla -->
    <string name="tabla_tipo">Type WBC</string>
    <string name="tabla_cantidad">Quantity </string>
    <string name="tabla_porcentaje">% 100</string>
    <string name="tabla_medida">/µL</string>
    <string name="tabla_fecha">Date</string>
    <string name="tabla_nombre">Name</string>

    <string name="valor_cero" translatable="false">0</string>

    <string name="baso">BASO</string>
    <string name="eos">EOS</string>
    <string name="mono">MONO</string>
    <string name="st">ST</string>
    <string name="seg">SEG</string>
    <string name="lym">LYM</string>
    <string name="nrbc">NRBC</string>
    <string name="other1">Other 1</string>
    <string name="other2">Other 2</string>

    <string name="baso_des">Basophils</string>
    <string name="eos_des">Eosinophils</string>
    <string name="mono_des">Monocytes</string>
    <string name="st_des">Immature granulocyte</string>
    <string name="seg_des">Neutrophils</string>
    <string name="lym_des">Lymphocytes</string>
    <string name="nrbc_des">Nucleated red blood cells</string>
    <string name="other1_des">Other 1</string>
    <string name="other2_des">Other 2</string>


    <string name="tabla_header_con_nrbc">With nRBC</string>
    <string name="tabla_header_sin_nrbc">Without nRBC</string>
    <string name="tabla_total_wbc">Total WBC</string>

    <string name="include_nrbc">Include nRBC</string>
    <string name="seleccione_cantidad_alertar">--Select alert quantity--</string>
    <string name="cantidad_alerta">Alert quantity</string>


    <!--Reporte-->
    <string name="etiqueta_nombre">Name:</string>
    <string name="etiqueta_fecha">Date:</string>
    <string name="etiqueta_telefono">Phone:</string>
    <string name="etiqueta_cantidad_total_wbc">Total amount of WBC:</string>
    <string name="etiqueta_total_wbc">Total WBC:</string>
    <string name="etiqueta_total_con_nrbc">With nRBC</string>
    <string name="etiqueta_total_sin_nrbc">Without nRBC</string>
    <string name="etiqueta_fecha_generacion">Current date:</string>
    <string name="titulo_reporte">Hemogram report</string>

    <string name="mensaje_indefinido">Undefined</string>
    <string name="configuracion_botones">Button configuration</string>
    <string name="vibrar">Vibrate</string>
    <string name="sonido">Sound</string>
    <string name="filtros">Filters</string>

    <string name="message_permission_denied">Some permissions have been denied</string>

    <string name="preference_file_key" translatable="false">WBCsCounterPreferences</string>
    <string name="preference_cantidad_alertar" translatable="false">CantidadAlertarPreference</string>
    <string name="preference_activar_sonido" translatable="false">ActivarSonidoPreference</string>
    <string name="preference_activar_vibracion" translatable="false">ActivarVibracionPreference</string>
    <string name="preference_conteo_temporal" translatable="false">ConteoTemporalPreference</string>
    <string name="preference_conteo_anterior_temporal" translatable="false">ConteoAnteriorTemporalPreference</string>

    <string name="desde">From:</string>
    <string name="hasta">To:</string>
    <string name="calcular_resultado">Calculate result</string>
    <string name="continuar_contando">Continue counting</string>
    <string name="cantidad_total_mayor_cero">The total amount must be greater than 0</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6245557439819570~4486118698</string>

    <string name="admob_unit_id_principal" translatable="false">ca-app-pub-6245557439819570/1479970964</string>
    <string name="admob_unit_id_calculo" translatable="false">ca-app-pub-6245557439819570/8368812948</string>
    <string name="admob_unit_id_historial" translatable="false">ca-app-pub-6245557439819570/7766764448</string>
    <string name="admob_unit_id_ejemplo" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="mensaje_sin_historial">Historical not available</string>

    <string name="creada_por">Created by</string>
    <string name="creadores">Fernando Ramírez Cipriano and Carlos Alberto Álvarez Vázquez</string>
    <string name="colaboracion_con">Collaboration with</string>
    <string name="colaboradores">Veterinary Specialist Edgar David González Gallegos</string>
    <string name="mensaje_about">Created by Fernando Ramírez Cipriano and Carlos Alberto Álvarez Vázquez in collaboration with the Veterinary Specialist Edgar David González Gallegos.</string>
    <string name="channel_name" translatable="false">HemaCount Channel</string>
    <string name="channel_description" translatable="false">HemaCount Channel</string>
    <string name="open_with">Open with</string>
    <string name="creacion_archivo">File creation</string>
    <string name="file_provider_authority" translatable="false">mx.com.sousystems.fileprovider</string>
</resources>
