<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_top" android:checkableBehavior="none">
        <item android:id="@+id/menu_patient"
            android:title="@string/menu_patient" android:icon="@drawable/ic_patient"/>
        <item android:id="@+id/menu_record"
            android:title="@string/menu_record" android:icon="@drawable/ic_record"/>
    </group>
    <!--android:icon="@drawable/ic_settings_menu"-->
    <group android:id="@+id/menu_bottom" android:checkableBehavior="none">
        <item android:id="@+id/menu_setting"
            android:title="@string/menu_setting" android:icon="@drawable/ic_setting"/>

        <item android:id="@+id/menu_about"
            android:title="@string/menu_about" android:icon="@drawable/ic_about"/>
    </group>


</menu>