<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PacienteActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/mensaje_titulo_crear_paciente"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/titulo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombre"
            android:focusable="true"
            style="@style/EditTextStyleOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
        android:id="@+id/etPrimerApellido"
        style="@style/EditTextStyleOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/primer_apellido"
        android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etSegundoApellido"
            style="@style/EditTextStyleOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/segundo_apellido"
            android:inputType="textPersonName" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo_femenino" />
            <RadioButton android:id="@+id/radio_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo_masculino" />
        </RadioGroup>

        <EditText
            android:id="@+id/etTelefono"
            style="@style/EditTextStyleOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnCrearPaciente"
            android:layout_width="match_parent"
            style="@style/ButtonStyleAceptar"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aceptar"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            style="@style/ButtonStyleCancelar"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cancelar"/>
    </LinearLayout>
</ScrollView>