<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_dark"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvHeaderTipoWbc"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        style="@style/HeaderStyle"
        android:text="@string/tabla_tipo"/>
    <TextView
        android:id="@+id/tvHeaderPorCantidad"
        style="@style/HeaderStyle"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/tabla_cantidad"/>
    <TextView
        android:id="@+id/tvHeaderPorcentaje"
        style="@style/HeaderStyle"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/tabla_porcentaje"/>
    <TextView
        android:id="@+id/tvHeaderMedida"
        style="@style/HeaderStyle"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/tabla_medida"/>

</LinearLayout>