<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvDatoTipoWbc"
        android:fontFamily="serif"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="#000"
        android:background="@color/gray"
        android:text="@string/tabla_tipo"/>
    <TextView
        android:id="@+id/tvDatoPorCantidad"
        android:textColor="#000"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/tabla_cantidad"/>
    <TextView
        android:id="@+id/tvDatoPorcentaje"
        android:textColor="#000"
        android:background="@color/gray"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/tabla_porcentaje"/>
    <TextView
        android:id="@+id/tvDatoMedida"
        android:textColor="#000"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/tabla_medida"/>

</LinearLayout>