<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/margin_padding_12"
    android:paddingTop="@dimen/margin_padding_12"
    android:paddingBottom="@dimen/margin_padding_12"
    android:weightSum="12">

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/tabla_fecha"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:paddingStart="@dimen/margin_padding_6"
        android:paddingLeft="@dimen/margin_padding_6"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:text="@string/tabla_nombre"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:paddingStart="@dimen/margin_padding_6"
        android:paddingLeft="@dimen/margin_padding_6"/>

    <ImageButton
        android:id="@+id/btnOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:foregroundGravity="center_horizontal"
        android:background="@color/transparent"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_more_vert_black" />

</LinearLayout>