<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_padding_16">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="12">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/cantidad_total"
                        android:textColor="@color/blue_dark" />

                    <TextView
                        android:id="@+id/tvCantidad"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/valor_cero"
                        android:textColor="@color/red"
                        android:textStyle="bold" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnResultado"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/margin_padding_8"
                    android:drawableStart="@drawable/baseline_send_white_18"
                    android:drawableLeft="@drawable/baseline_send_white_18"

                    android:text="@string/resultado" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_padding_8"
                    android:layout_marginTop="@dimen/margin_padding_8"
                    android:layout_marginBottom="@dimen/margin_padding_8"
                    android:background="@color/gray_dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnEliminarUltimo"
                        style="@style/ButtonWarning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/baseline_undo_black_18"
                        android:drawableLeft="@drawable/baseline_undo_black_18"
                        android:text="@string/eliminar_ultimo" />

                    <Button
                        android:id="@+id/btnReiniciar"
                        style="@style/ButtonDanger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_padding_8"
                        android:layout_marginLeft="@dimen/margin_padding_8"
                        android:drawableStart="@drawable/baseline_delete_forever_white_18"
                        android:drawableLeft="@drawable/baseline_delete_forever_white_18"
                        android:text="@string/reiniciar" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_padding_8"
                    android:layout_marginTop="@dimen/margin_padding_8"
                    android:layout_marginBottom="@dimen/margin_padding_8"
                    android:background="@color/gray_dark" />
                <!--<GridView
                    android:id="@+id/gvCelulas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="3"

                    />-->
                <LinearLayout
                    android:id="@+id/llCelulas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <!--<com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_marginTop="@dimen/margin_padding_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/add_unit_id_one">
                </com.google.android.gms.ads.AdView>-->


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="#E6E6E6"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/nav_options" />
</android.support.v4.widget.DrawerLayout>